--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_API_URL=http://localhost:5005/api
+CLOUDINARY_NAME=dcscgkweg
+CLOUDINARY_KEY=759351981152941
+CLOUDINARY_SECRET=qKexIGV6z_1zPQpdkezHvr83SZ8
