--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^18.1.0",
     "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^3.3.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
